--- a/processor-project/example.env
+++ b/processor-project/example.env
@@ -1,11 +1,12 @@
 FILE_LOCATION=../backend-challenge-file-ingestion/data-generator/challenge/input/CLIENTES_IN_0425.dat
-USE_TEST_DATABASE=true
+USE_TEST_DATABASE=1
 
-DB_HOST
-DB_PORT
-DB_USERNAME
-DB_PASSWORD
-DB_NAME
+# Setear si usas una base de datos sql server (USE_TEST_DATABASE=0)
+# DB_HOST
+# DB_PORT
+# DB_USERNAME
+# DB_PASSWORD
+# DB_NAME
 
 HTTP_SERVER_PORT=3000
 HTTP_SERVER_HOSTNAME=localhost
